TPDFINXCDDB-29 / tooltip select z-index fix

--- a/sites/all/themes/itdash/html/scss/modules/_elements.scss
+++ b/sites/all/themes/itdash/html/scss/modules/_elements.scss
@@ -384,3 +384,7 @@ body,
     background-color: transparent;
   }
 }
+
+.sbOptions {
+  z-index: 2;
+}
